# pre-meeting-intel

./: .gitignore  README.md  main.py  pyproject.toml  test_run.py
frontend/: index.html
src/api/: config.py  main.py  schemas.py
src/intelligence/: agent.py  briefing.py  config.py  contact.py  embeddings.py  exceptions.py  fetcher.py  models.py  search.py  utils.py  vector_store.py
tests/: test_api.py  test_briefing.py  test_contact.py  test_exceptions.py  test_fetcher.py  test_models.py  test_search.py  test_utils.py  test_vector_store.py
